49
================

01/08/24 Add ANIMALLITTER csv import field
01/08/24 Update 34803: By->MovedBy so it doesn't break the update path on MySQL
01/08/24 PetFinder: Omit cruelty case flagged animals from Stray/Hold uploads
01/08/24 Streamline advanced find animal query so diet/originalowner joins not needed
01/08/24 Refactor find animal to use the 2 step ID->record trick like shelterview
01/08/24 Use brief records for embedded animal searches
31/07/24 Refactor get_animals_brief to use separate, faster query for performance
30/07/24 AdoptAPet: Add mapping for Blue Lacy -> Blue Lacy/Texas Lacy
29/07/24 Add default transport option
25/07/24 When editing animals, do not filter location list by user loc filter
25/07/24 When stripping personal data, strip coordinator, retain integer for ID fields
25/07/24 Fix error using advanced find animal with location filter 
23/07/24 Handle broken report queries when exporting to CSV/Excel
17/07/24 iOS: online forms, use browser built in support for required attribute
16/07/24 Include phone numbers when stripping personal info from service calls
16/07/24 Hide person name from location in mobile UI if no view person permission
16/07/24 Location filters incorrectly allowing fosters who left location
16/07/24 Strip person info from all service calls by default, use sensitive=1
16/07/24 New service permissions, require VIEW_MOVEMENT for json_recent_adoptions
15/07/24 Fix bug that meant cloning a form with null string fields failed
15/07/24 Hide mobile menus that do not have visible elements #1505
15/07/24 Enforce permissions on mobile UI navbar by hiding elements #1505
15/07/24 Enable add animal screen for mobile users #1505
15/07/24 SavourLife: use additional "medicalissues" instead of health problems
13/07/24 Improve mobile layout, add icons, reinstate add message #1505
12/07/24 Refactoring of locationfilter code to use encapsulated object
12/07/24 Include icons on mobile timeline